--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon app.js",
-    "build": "postcss ./src/styles.css -o ./public/css/styles.css",
+    "build": "postcss ./src/styles.css -o ./public/css/styles.css -w",
     "prod": "NODE_ENV=production postcss ./src/styles.css -o ./public/css/styles.css"
   },
   "author": "",
