--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "autoprefixer": "^10.3.3",
+    "bcrypt": "^5.0.1",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "express-validator": "^6.12.1",
     "mysql2": "^2.2.5",
     "nodemon": "^2.0.7",
     "postcss-cli": "^8.3.1",
