--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,8 @@
         "browser": true, // to enable browsers variable support - document, localStorage etc.
         "node": true // to enable nodejs support
     },
-    "extends": "airbnb-base", // to use airbnb-base as eslint config
+    "extends": "airbnb-base", // to use airbnb-base as eslint config 
+    "ignorePatterns": ["**/vendors/*.js"],
     "rules": {
         "semi": "off" // to turn off the semicolon lint
     }
