js & css, minify, error page design & toast alert
6 package install in dev dependencies (@babel/core/@babel/preset-env/babelloader/webpack/weebpack-cli/cssnano)
unauthorized  error page design
added user success then show toast alert

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,12 +1,13 @@
 {
-    "env": {
-        "es6": true, // to enable es6 support
-        "browser": true, // to enable browsers variable support - document, localStorage etc.
-        "node": true // to enable nodejs support
-    },
-    "extends": "airbnb-base", // to use airbnb-base as eslint config 
-    "ignorePatterns": ["**/vendors/*.js"],
-    "rules": {
-        "semi": "off" // to turn off the semicolon lint
-    }
+  "env": {
+    "es6": true, // to enable es6 support
+    "browser": true, // to enable browsers variable support - document, localStorage etc.
+    "node": true // to enable nodejs support
+  },
+  "extends": "airbnb-base", // to use airbnb-base as eslint config
+  "ignorePatterns": ["**/vendors/*.js", "bundle.js"],
+
+  "rules": {
+    "semi": "off" // to turn off the semicolon lint
+  }
 }
