--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build-dev": "webpack --mode development",
+    "build-dev": "webpack --mode development -w",
     "start": "NODE_ENV=development nodemon  app.js",
     "production": "NODE_ENV=production node app.js",
     "build": "postcss ./src/styles.css -o ./public/css/styles.css -w",
