--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-validator": "^6.12.1",
     "http-errors": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.3",
     "mysql2": "^2.2.5",
     "nodemon": "^2.0.7",
     "postcss-cli": "^8.3.1",
