--- a/package.json
+++ b/package.json
@@ -15,16 +15,22 @@
   "dependencies": {
     "autoprefixer": "^10.3.3",
     "bcrypt": "^5.0.1",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "express-validator": "^6.12.1",
+    "googleapis": "^88.2.0",
     "http-errors": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.3",
     "mysql2": "^2.2.5",
+    "nodemailer": "^6.6.5",
     "nodemon": "^2.0.7",
+    "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
     "postcss-cli": "^8.3.1",
     "tailwindcss": "^2.2.9",
     "win-node-env": "^0.4.0"
