update env sample

--- a/.env.sample
+++ b/.env.sample
@@ -6,3 +6,11 @@ JWT_SECRET =
 COOKIE_SECRET = 
 COOKIE_NAME =
 BASE_URL = 
+
+CLIENT_ID=
+CLIENT_SECRET=
+REDIRECT_LINK= 
+
+GOOGLE_PASSPORT_CLIENT_ID =
+GOOGLE_PASSPORT_CLIENT_SECRET =
+GOOGLE_PASSPORT_CALLBACK_URL=
