--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "nodemailer": "^6.6.5",
     "nodemon": "^2.0.7",
     "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "postcss-cli": "^8.3.1",
     "tailwindcss": "^2.2.9",
