--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "clean": "rimraf node_modules package.json",
+    "clean-install": "rimraf node_modules package-lock.json && npm i",
     "build-dev": "webpack --mode development -w",
     "start": "NODE_ENV=development nodemon  app.js",
     "production": "NODE_ENV=production node app.js",
@@ -13,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
     "autoprefixer": "^10.3.3",
     "axios": "^0.23.0",
     "bcrypt": "^5.0.1",
@@ -34,13 +37,15 @@
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "postcss-cli": "^8.3.1",
+    "rimraf": "^3.0.2",
     "tailwindcss": "^2.2.9",
     "win-node-env": "^0.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
     "@babel/preset-env": "^7.15.4",
-    "babel-loader": "^8.2.2",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.2.3",
     "cssnano": "^5.0.8",
     "eslint": "^7.2.0",
     "eslint-config-airbnb-base": "^14.2.1",
