--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "build-dev": "webpack --mode development -w",
     "start": "NODE_ENV=development nodemon  app.js",
     "production": "NODE_ENV=production node app.js",
-    "build": "postcss ./src/styles.css -o ./public/css/styles.css -w",
-    "prod": "NODE_ENV=production postcss ./src/styles.css -o ./public/css/styles.css"
+    "build": "postcss ./src/tailwind.css -o ./public/css/styles.css -w",
+    "prod": "NODE_ENV=production postcss ./src/tailwind.css -o ./public/css/styles.css"
   },
   "author": "",
   "license": "ISC",
