--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "passport-google-oauth20": "^2.0.0",
     "postcss-cli": "^8.3.1",
     "rimraf": "^3.0.2",
+    "sequelize": "^6.12.0-alpha.1",
     "tailwindcss": "^2.2.9",
     "win-node-env": "^0.4.0"
   },
@@ -51,6 +52,7 @@
     "eslint": "^7.2.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
+    "sequelize-cli": "^6.3.0",
     "webpack": "^5.52.0",
     "webpack-cli": "^4.8.0"
   }
