--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
+    "@babel/plugin-transform-async-to-generator": "^7.16.0",
     "@babel/preset-env": "^7.15.4",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.2.3",
