--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "build-dev": "webpack --mode development -w",
     "start": "NODE_ENV=development nodemon  app.js",
     "production": "NODE_ENV=production node app.js"
-  
   },
   "author": "",
   "license": "ISC",
@@ -43,6 +42,7 @@
   "devDependencies": {
     "@babel/core": "^7.15.5",
     "@babel/plugin-transform-async-to-generator": "^7.16.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.17.7",
     "@babel/preset-env": "^7.15.4",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.2.3",
