--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "mvc",
   "version": "1.0.0",
   "description": "",
+   "engines": {
+    "node": "16.x"
+  },
   "main": "index.js",
   "scripts": {
     "clean": "rimraf node_modules package.json",
