--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "",
    "engines": {
-    "node": "16.x"
+    "node": "16.x",
+     "npm": "6.x",
   },
   "main": "index.js",
   "scripts": {
