--- a/package.json
+++ b/package.json
@@ -39,8 +39,7 @@
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "rimraf": "^3.0.2",
-    "sequelize": "^6.12.0-alpha.1",
-    "win-node-env": "^0.4.0"
+    "sequelize": "^6.12.0-alpha.1"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
