--- a/.env.sample
+++ b/.env.sample
@@ -1,16 +1,31 @@
+// Database Connect
+
 DB_HOST=''
 DB_USER=''
 DB_NAME = ''
 DB_PASSWORD = ''
 PORT = 
+
+// Json Web Token Secret
+
 JWT_SECRET = 
+
+// Cookie Section
+
 COOKIE_SECRET = 
 COOKIE_NAME =
+
+// Application Base Url
+
 BASE_URL = 
+
+// Facebook integration
 
 CLIENT_ID=
 CLIENT_SECRET=
 REDIRECT_LINK= 
+
+// Google integration
 
 GOOGLE_PASSPORT_CLIENT_ID =
 GOOGLE_PASSPORT_CLIENT_SECRET =
