facebook integration update

--- a/.env.sample
+++ b/.env.sample
@@ -21,9 +21,9 @@ BASE_URL =
 
 // Facebook integration
 
-CLIENT_ID=
-CLIENT_SECRET=
-REDIRECT_LINK= 
+FACEBOOK_CLIENT_ID=
+FACEBOOK_CLIENT_SECRET=
+FACEBOOK_REDIRECT_LINK= 
 
 // Google integration
 
