env sample restructured

--- a/.env.sample
+++ b/.env.sample
@@ -1,32 +1,26 @@
-// Database Connect
-
-DB_HOST=''
-DB_USER=''
+// Database Connect (required)
+DB_HOST = ''
+DB_USER = ''
 DB_NAME = ''
 DB_PASSWORD = ''
 PORT = 
 
-// Json Web Token Secret
+// Application Base Url (required)
+BASE_URL = ''
 
-JWT_SECRET = 
+// Json Web Token Secret (required)
+JWT_SECRET = 'a6627dfc3c118eaf549f86757e60b37d0aa70854'
 
-// Cookie Section
+// Cookie Section (required)
+COOKIE_SECRET = 'a6627dfc3c118eaf549f86757e60b37d0aa70854'
+COOKIE_NAME = 'Oclock'
 
-COOKIE_SECRET = 
-COOKIE_NAME =
+// Facebook integration (optional)
+FACEBOOK_CLIENT_ID = ''
+FACEBOOK_CLIENT_SECRET = ''
+FACEBOOK_REDIRECT_LINK = ''
 
-// Application Base Url
-
-BASE_URL = 
-
-// Facebook integration
-
-FACEBOOK_CLIENT_ID=
-FACEBOOK_CLIENT_SECRET=
-FACEBOOK_REDIRECT_LINK= 
-
-// Google integration
-
-GOOGLE_PASSPORT_CLIENT_ID =
-GOOGLE_PASSPORT_CLIENT_SECRET =
-GOOGLE_PASSPORT_CALLBACK_URL=
+// Google integration (optional)
+GOOGLE_PASSPORT_CLIENT_ID = ''
+GOOGLE_PASSPORT_CLIENT_SECRET = ''
+GOOGLE_PASSPORT_CALLBACK_URL = ''
