--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "clean": "rimraf node_modules package.json",
     "clean-install": "rimraf node_modules package-lock.json && npm i",
     "build-dev": "webpack --mode development -w",
-    "start": "NODE_ENV=development node  app.js",
+    "start": "NODE_ENV=production node  app.js",
     "production": "NODE_ENV=production node app.js",
     "server": "NODE_ENV=development nodemon  app.js",
     "prod": "NODE_ENV=production nodemon  app.js"
