--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "clean": "rimraf node_modules package.json",
     "clean-install": "rimraf node_modules package-lock.json && npm i",
     "build-dev": "webpack --mode development -w",
+    "build-prod": "webpack --mode production",
     "start": "NODE_ENV=production node  app.js",
-    "production": "NODE_ENV=production node app.js",
+    "production": "npm run build-prod && NODE_ENV=production node app.js",
     "server": "NODE_ENV=development nodemon  app.js",
     "prod": "NODE_ENV=production nodemon  app.js"
   },
@@ -20,42 +21,42 @@
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
     "@themesberg/flowbite": "^1.1.1",
-    "autoprefixer": "^10.3.3",
-    "axios": "^0.23.0",
+    "autoprefixer": "^10.4.7",
+    "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "connect-flash": "^0.1.1",
-    "cookie-parser": "^1.4.5",
-    "dotenv": "^8.2.0",
-    "ejs": "^3.1.5",
-    "express": "^4.17.1",
-    "express-session": "^1.17.2",
-    "express-validator": "^6.12.1",
-    "googleapis": "^88.2.0",
-    "http-errors": "^1.8.0",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.1",
+    "ejs": "^3.1.8",
+    "express": "^4.18.1",
+    "express-session": "^1.17.3",
+    "express-validator": "^6.14.2",
+    "googleapis": "^105.0.0",
+    "http-errors": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.3",
-    "mysql2": "^2.3.2",
-    "nodemailer": "^6.6.5",
-    "nodemon": "^2.0.7",
-    "passport": "^0.4.1",
+    "mysql2": "^2.3.3",
+    "nodemailer": "^6.7.7",
+    "nodemon": "^2.0.19",
+    "passport": "^0.6.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "rimraf": "^3.0.2",
-    "sequelize": "^6.12.0-alpha.1"
+    "sequelize": "^6.21.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.5",
-    "@babel/plugin-transform-async-to-generator": "^7.16.0",
-    "@babel/plugin-transform-modules-commonjs": "^7.17.7",
-    "@babel/preset-env": "^7.15.4",
+    "@babel/core": "^7.18.6",
+    "@babel/plugin-transform-async-to-generator": "^7.18.6",
+    "@babel/plugin-transform-modules-commonjs": "^7.18.6",
+    "@babel/preset-env": "^7.18.6",
     "babel-core": "^6.26.3",
-    "babel-loader": "^8.2.3",
-    "cssnano": "^5.0.8",
-    "eslint": "^7.2.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.22.1",
-    "sequelize-cli": "^6.3.0",
-    "webpack": "^5.52.0",
-    "webpack-cli": "^4.8.0"
+    "babel-loader": "^8.2.5",
+    "cssnano": "^5.1.12",
+    "eslint": "^8.20.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "sequelize-cli": "^6.4.1",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0"
   }
 }
