--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^8.2.5",
     "cssnano": "^5.1.12",
+    "dotenv-webpack": "^8.0.0",
     "eslint": "^8.20.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
