--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build-dev": "webpack --mode development -w",
     "build-prod": "webpack --mode production",
     "start": "NODE_ENV=production node  app.js",
-    "production": "npm run build-prod && NODE_ENV=production node app.js",
+    "production": "npm run build-prod && npm run prod",
     "server": "NODE_ENV=development nodemon  app.js",
     "prod": "NODE_ENV=production nodemon  app.js"
   },
