--- a/.env.sample
+++ b/.env.sample
@@ -24,3 +24,7 @@ FACEBOOK_REDIRECT_LINK = ''
 GOOGLE_PASSPORT_CLIENT_ID = ''
 GOOGLE_PASSPORT_CLIENT_SECRET = ''
 GOOGLE_PASSPORT_CALLBACK_URL = ''
+
+// Table pagination row
+
+PAGINATION_ROW=10
